--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+#redis
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+#spring.cache.redis.time-to-live=40000
+
+#spring.data.redis.host=10.186.42.150
+spring.data.redis.port=8082
+
